--- a/app/src/main/res/drawable/ic_button_next_background.xml
+++ b/app/src/main/res/drawable/ic_button_next_background.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="89">
   <path
       android:pathData="M4.03,35.51a23,23 0,0 1,5.69 -12.21L23.2,8.32a23,23 0,0 1,22.76 -6.9l40.67,10.35a23,23 0,0 1,5.46 2.16l17.41,9.63a23,23 0,0 1,11.29 15l5.4,23.59c3.99,17.42 -15.57,30.61 -30.22,20.38a19.53,19.53 0,0 0,-14.27 -3.27L26.72,88.05C11.45,90.5 -1.84,77.48 0.3,62.16l3.72,-26.66Z"
-      android:fillColor="#716C6C"/>
+      android:fillColor="@color/backgroud_for_buttons"/>
 </vector>
