--- a/app/src/main/res/layout/start_app_layout.xml
+++ b/app/src/main/res/layout/start_app_layout.xml
@@ -100,6 +100,8 @@
         android:fontFamily="sans-serif-light"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/edit_text_name_vertical_right_guideline"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/edit_text_name_vertical_left_guideline"
