--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -139,21 +139,19 @@
         app:layout_constraintVertical_bias="0.584" />
 
 
-
-
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/heart_1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="12dp"
-        app:shapeAppearanceOverlay="@style/round_image_10"
         android:scaleType="centerCrop"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/heart_icn_horizontal_bottom_guideline"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/heart_icn_horizontal_top_guideline"
         app:layout_constraintVertical_bias="0.0"
+        app:shapeAppearanceOverlay="@style/round_image_8"
         app:srcCompat="@drawable/heart_icn" />
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -161,9 +159,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        app:shapeAppearanceOverlay="@style/round_image_10"
+        app:shapeAppearanceOverlay="@style/round_image_8"
         android:scaleType="centerCrop"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/heart_icn_horizontal_bottom_guideline"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toEndOf="@+id/heart_1"
@@ -176,15 +174,31 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        app:shapeAppearanceOverlay="@style/round_image_10"
+        app:shapeAppearanceOverlay="@style/round_image_8"
         android:scaleType="centerCrop"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/heart_icn_horizontal_bottom_guideline"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toEndOf="@+id/heart_2"
         app:layout_constraintTop_toTopOf="@+id/heart_icn_horizontal_top_guideline"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/heart_icn" />
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/bonus_icn_test"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/heart_icn_horizontal_bottom_guideline"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/card_background_vertical_right_guideline"
+        app:layout_constraintStart_toStartOf="@+id/card_img_background_vertical_right_guideline"
+        app:layout_constraintTop_toTopOf="@+id/heart_icn_horizontal_top_guideline"
+        app:layout_constraintVertical_bias="0.0"
+        app:shapeAppearanceOverlay="@style/round_image_8"
+        app:srcCompat="@drawable/bonus_icn" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -491,13 +505,12 @@
         app:layout_constraintGuide_percent="0.84"/>
 
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/heart_icn_horizontal_top_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/heart_icn_horizontal_bottom_guideline"
