--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -49,18 +49,19 @@
         app:srcCompat="@drawable/background_2_1" />
 
 
-
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/word_img"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:shapeAppearanceOverlay="@style/round_image_5"
         android:scaleType="centerCrop"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/card_img_background_horizontal_bottom_guideline"
         app:layout_constraintEnd_toStartOf="@+id/card_img_background_vertical_right_guideline"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/card_img_background_vertical_left_guideline"
         app:layout_constraintTop_toTopOf="@+id/card_img_background_horizontal_top_guideline"
+        app:layout_constraintVertical_bias="0.0"
+        app:shapeAppearanceOverlay="@style/round_image_5"
         app:srcCompat="@drawable/mouse_test_word_image" />
 
     <TextView
@@ -279,7 +280,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/answer_button_vertical_right_guideline"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/answer_button_vertical_left_guideline"
@@ -298,7 +299,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/answer_button_vertical_right_guideline"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/answer_button_vertical_left_guideline"
