--- a/app/src/main/res/layout/tenses_info_layout.xml
+++ b/app/src/main/res/layout/tenses_info_layout.xml
@@ -45,6 +45,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/tense_name_info"
         android:layout_width="154dp"
         android:layout_height="45dp"
         android:fontFamily="sans-serif-light"
