--- a/app/src/main/res/layout/finish_test.xml
+++ b/app/src/main/res/layout/finish_test.xml
@@ -64,10 +64,11 @@
     <ProgressBar
         android:id="@+id/finish_test_progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="196dp"
-        android:layout_height="32dp"
-        android:indeterminate="true"
-        android:indeterminateTint="@color/white"
+        android:layout_width="236dp"
+        android:layout_height="8dp"
+        android:layout_marginTop="12dp"
+        android:progress="24"
+        android:progressDrawable="@drawable/progress_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
