--- a/app/src/main/res/layout/topic_chooser_item.xml
+++ b/app/src/main/res/layout/topic_chooser_item.xml
@@ -56,17 +56,18 @@
 
         <ProgressBar
             android:id="@+id/progressBar2"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="172dp"
-            android:layout_height="0dp"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="180dp"
+            android:layout_height="6dp"
             android:layout_marginBottom="16dp"
-            android:indeterminate="true"
+            android:indeterminate="false"
+            android:progress="25"
             android:indeterminateTint="@color/white"
+            android:progressDrawable="@drawable/progress_background"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.659"
-            app:layout_constraintStart_toStartOf="parent" />
-
+            app:layout_constraintEnd_toEndOf="@+id/topic_name"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/topic_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
