--- a/app/src/main/res/layout/topic_chooser_item.xml
+++ b/app/src/main/res/layout/topic_chooser_item.xml
@@ -56,7 +56,7 @@
 
         <ProgressBar
             android:id="@+id/topic_progress_bar"
-            style="@android:style/Widget.ProgressBar.Horizontal"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="180dp"
             android:layout_height="6dp"
             android:layout_marginBottom="16dp"
