--- a/app/src/main/res/layout/tense_info.xml
+++ b/app/src/main/res/layout/tense_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/background_4"
-        tools:layout_editor_absoluteX="-38dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -47,17 +47,13 @@
         app:layout_constraintTop_toTopOf="@+id/top_info_background" />
 
 
-    <TextView
-        android:id="@+id/info_tense"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/info_tense_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="sans-serif-light"
-        android:gravity="start"
-        android:includeFontPadding="false"
-        android:letterSpacing="0.1"
-        android:text="Tenses Info"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+
+        app:shapeAppearanceOverlay="@style/round_image_20"
+        app:srcCompat="@drawable/hardware_icn"
         app:layout_constraintBottom_toTopOf="@+id/tenses_info_list_horizontal_bottom_guideline"
         app:layout_constraintEnd_toStartOf="@+id/right_tense_list_vertical_right_guideline"
         app:layout_constraintHorizontal_bias="0.074"
@@ -78,13 +74,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.90"/>
+        app:layout_constraintGuide_percent="0.95"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_tense_list_vertical_left_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1"/>
+        app:layout_constraintGuide_percent="0.05"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_menu_vertical_right_guideline"
@@ -108,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15"/>
+        app:layout_constraintGuide_percent="0.2"/>
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -116,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.84"/>
 
 
 
