Add letterRecycler fixes

--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -253,6 +253,11 @@
         android:id="@+id/letter_chooser"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fadeScrollbars="false"
+        android:scrollX="50px"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
+        android:scrollbars="horizontal"
+        android:soundEffectsEnabled="false"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/letter_chooser_bottom_guideline"
         app:layout_constraintEnd_toStartOf="@+id/card_img_background_vertical_right_guideline"
