--- a/app/src/main/res/layout/letter_chooser_item.xml
+++ b/app/src/main/res/layout/letter_chooser_item.xml
@@ -6,7 +6,7 @@
     android:id="@+id/card_view_of_letter_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_marginBottom="5dp"
     app:cardBackgroundColor="@color/backgroud_for_buttons"
     app:cardCornerRadius="90dp">
 
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:text="M"
         android:textColor="@color/white"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:textStyle="bold" />
 
 </androidx.cardview.widget.CardView>
