--- a/app/src/main/res/layout/start_app_layout.xml
+++ b/app/src/main/res/layout/start_app_layout.xml
@@ -20,7 +20,7 @@
         android:id="@+id/start_app_logo_text"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif"
         android:includeFontPadding="false"
         android:letterSpacing="0.1"
         android:text="@string/logo_text"
@@ -35,7 +35,7 @@
         android:id="@+id/start_app_logo_bottom_text"
         android:layout_width="match_parent"
         android:layout_height="37dp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif"
         android:includeFontPadding="false"
         android:letterSpacing="0.25"
         android:text="@string/logo_bottom_text"
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif"
         android:includeFontPadding="false"
         android:letterSpacing="0.1"
         android:text="Do you want to add your icon?"
@@ -81,7 +81,7 @@
         android:layout_width="409dp"
         android:layout_height="29dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif"
         android:includeFontPadding="false"
         android:letterSpacing="0.1"
         android:text="How should we name you?"
