--- a/app/src/main/res/layout/main_frame_info.xml
+++ b/app/src/main/res/layout/main_frame_info.xml
@@ -192,13 +192,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/main_frame_grammar_info_button"
-        android:layout_width="81dp"
+        android:layout_width="120dp"
         android:layout_height="52dp"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:background="@drawable/ic_button_again_background"
         android:fontFamily="sans-serif"
-        android:text="Learn"
+        android:text="Learn Grammar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -209,13 +209,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/main_frame_random_test_button"
-        android:layout_width="81dp"
+        android:layout_width="120dp"
         android:layout_height="52dp"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/ic_button_learn_background"
         android:fontFamily="sans-serif"
-        android:text="Random"
+        android:text="Random Topic"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -235,7 +235,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_menu_background"
         app:layout_constraintEnd_toStartOf="@+id/main_frame_random_test_button"
         app:layout_constraintStart_toEndOf="@+id/main_frame_grammar_info_button"
